--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ numpy==1.22.0;python_version<="3.10"
 numpy>=1.24.3;python_version>"3.10"
 cython>=0.29.30
 scipy>=1.11.2
-torch>=2.1
+
+# force using torch 2.1
+torch==2.1
 torchaudio
 soundfile>=0.12.0
 librosa>=0.10.0
@@ -48,10 +50,17 @@ bnnumerizer
 bnunicodenormalizer
 #deps for tortoise
 einops>=0.6.0
-transformers>=4.33.0
+transformers==4.40.2
 #deps for bark
 encodec>=0.1.1
 # deps for XTTS
 unidecode>=1.3.2
 num2words
-spacy[ja]>=3
+spacy[ja]==3.7.6
+sagemaker_ssh_helper
+
+# for inference speed up
+deepspeed==0.10.3
+
+# s5cmd for faster s3 download
+s5cmd
