--- a/Dockerfile-sagemaker
+++ b/Dockerfile-sagemaker
@@ -1,16 +1,8 @@
 ARG DEBIAN_FRONTEND=noninteractive
-ARG BASE=nvidia/cuda:11.8.0-base-ubuntu22.04
+ARG BASE=ghcr.io/coqui-ai/tts:dbf1a08a0d4e47fdad6172e433eeb34bc6b13b4e
 FROM ${BASE}
 
-RUN apt-get update # && apt-get upgrade -y
-RUN apt-get install -y --no-install-recommends gcc g++ make python3 python3-dev python3-pip python3-venv python3-wheel espeak-ng libsndfile1-dev && rm -rf /var/lib/apt/lists/*
-RUN pip3 install llvmlite --ignore-installed
-
-# Install Dependencies:
-RUN pip3 install torch==2.1 torchaudio --extra-index-url https://download.pytorch.org/whl/cu118
 RUN pip3 install --no-cache-dir sagemaker
-
-RUN rm -rf /root/.cache/pip
 
 # Copy TTS repository contents:
 WORKDIR /root
